kube/local/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: netframe-local
  labels:
    app: netframe
    environment: local
