kube/local/broadcast.yml
apiVersion: v1
kind: Service
metadata:
  name: netframe-broadcast
  namespace: netframe-local
  labels:
    app: netframe
    tier: broadcast
    environment: local
spec:
  ports:
    - port: 6001
      protocol: TCP
  clusterIP: None
  selector:
    app: netframe
    tier: broadcast
    environment: local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netframe-broadcast
  namespace: netframe-local
  labels:
    app: netframe
    tier: broadcast
    environment: local
spec:
  selector:
    matchLabels:
      app: netframe
      tier: broadcast
      environment: local
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: netframe-local
      labels:
        app: netframe
        tier: broadcast
        environment: local
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      containers:
        - name: netframe-broadcast
          image: kz91436x.gra7.container-registry.ovh.net/netframe/broadcast:0.0.0
          ports:
            - containerPort: 80
