kube/local/cache.yml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: netframe-local
  labels:
    app: cache
    environment: development
spec:
  ports:
    - port: 6379
      protocol: TCP
  clusterIP: None
  selector:
    app: cache
    environment: development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netframe-cache
  namespace: netframe-local
  labels:
    app: cache
    environment: development
spec:
  selector:
    matchLabels:
      app: cache
      environment: development
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: netframe-local
      labels:
        app: cache
        environment: development
    spec:
      restartPolicy: Always
      containers:
        - image: redis:5.0-buster
          name: cache
