kube/local/collab.yml
apiVersion: v1
kind: Service
metadata:
  name: netframe-collab
  namespace: netframe-local
  labels:
    app: netframe
    tier: collab
    environment: local
spec:
  ports:
    - port: 3000
      protocol: TCP
  clusterIP: None
  selector:
    app: netframe
    tier: collab
    environment: local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netframe-collab
  namespace: netframe-local
  labels:
    app: netframe
    tier: collab
    environment: local
spec:
  selector:
    matchLabels:
      app: netframe
      tier: collab
      environment: local
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: netframe-local
      labels:
        app: netframe
        tier: collab
        environment: local
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      containers:
        - name: netframe-collab
          image: kz91436x.gra7.container-registry.ovh.net/netframe/collab:0.0.0
          ports:
            - containerPort: 80
