kube/local/database.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: netframe-local
  labels:
    app: database
    environment: local
spec:
  ports:
    - port: 3306
      protocol: TCP
  clusterIP: None
  selector:
    app: database
    environment: local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netframe-database
  namespace: netframe-local
  labels:
    app: database
    environment: local
spec:
  selector:
    matchLabels:
      app: database
      environment: local
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: netframe-local
      labels:
        app: database
        environment: local
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
        - image: mariadb:10.3.27
          name: database
          args: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_general_ci"]
          volumeMounts:
            - name: config
              mountPath: "/etc/mysql/conf.d"
              readOnly: true
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: config
          configMap:
            name: database-files
            items:
              - key: "my.cnf"
                path: "my.cnf"
        - name: data
          hostPath:
            path: /data/netframe/database
            type: DirectoryOrCreate
