kube/local/netframe.yml
apiVersion: v1
kind: Service
metadata:
  name: netframe-netframe
  namespace: netframe-local
  labels:
    app: netframe
    tier: netframe
    environment: local
spec:
  ports:
    - port: 80
      protocol: TCP
  clusterIP: None
  selector:
    app: netframe
    tier: netframe
    environment: local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netframe-netframe
  namespace: netframe-local
  labels:
    app: netframe
    tier: netframe
    environment: local
spec:
  selector:
    matchLabels:
      app: netframe
      tier: netframe
      environment: local
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: netframe-local
      labels:
        app: netframe
        tier: netframe
        environment: local
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 33 # this is www-data GID in the Docker PHP image
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: netframe-netframe
          image: kz91436x.gra7.container-registry.ovh.net/netframe/netframe:0.0.0
          workingDir: /var/www/html
          ports:
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: uploads
              mountPath: /var/www/html/storage/uploads
          startupProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - "stat -c %U /var/www/html/public/index.php | grep -q www-data"
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "cp -r /app/* /var/www/html/ && chown -R www-data:www-data /var/www/html/storage/ /var/www/html/public/"
        - name: http
          image: "nginx:1.18.0"
          ports:
            - containerPort: 80
          volumeMounts:
            # Nginx configuration
            - name: netframe-http
              mountPath: /etc/nginx/conf.d
            # Netframe application
            - name: app
              mountPath: /var/www/html
            # Uploads for x-send-file
            - name: uploads
              mountPath: /var/www/html/storage/uploads
      volumes:
        - name: uploads
          hostPath:
            path: /data/netframe/uploads
            type: DirectoryOrCreate
        - name: app
          emptyDir: {}
        - name: http
          configMap:
            name: http
