kube/local/search.yml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: netframe-local
  labels:
    app: search
    environment: local
spec:
  ports:
    - port: 9200
      protocol: TCP
  clusterIP: None
  selector:
    app: search
    environment: local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netframe-search
  namespace: netframe-local
  labels:
    app: search
    environment: local
spec:
  selector:
    matchLabels:
      app: search
      environment: local
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: netframe-local
      labels:
        app: search
        environment: local
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000 # this is elasticsearch GID in the Docker ElasticSearch image
        fsGroupChangePolicy: Always
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.0.1
          name: search
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: data
          hostPath:
            path: /data/netframe/search
            type: DirectoryOrCreate
